--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <header>
+  <header class="sticky-nav">
     <div class="icon">
       <!-- <img src="images/newz-dog.png" alt="doggie icon"> -->
       <img src="images/icons/icon-512x512.png" alt="Dog Logo">
@@ -33,5 +33,27 @@
   <main>
   </main>
   <script src='js/script.js' type='text/javascript'></script>
+  <script type="text/javascript">
+    window.addEventListener('scroll', scrollSpy)
+    const nav = document.querySelector('header')
+    const y = 320
+    function scrollSpy(e) {
+      let x = window.pageYOffset;
+      if(x<=y) {
+        unstick()
+      }else{
+        stick()
+      }
+    }
+    const stick = ()=>{
+      document.body.classList.add('stuck')
+      document.body.style.paddingTop = getNavHeight() + 'px'
+    } 
+    const unstick = ()=>{
+      document.body.classList.remove('stuck')
+      document.body.style.paddingTop= 0 + 'px'
+    }
+    const getNavHeight = ()=> nav.offsetHeight
+  </script>
 </body>
 </html>
