update service worker cache and manage cache

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <header class="sticky-nav">
     <div class="icon">
-      <!-- <img src="images/newz-dog.png" alt="doggie icon"> -->
-      <img src="images/icons/icon-512x512.png" alt="Dog Logo">
+      <img src="images/dog-logo.png" alt="doggie icon">
+      <!-- <img src="images/icons/icon-512x512.png" alt="Dog Logo"> -->
     </div>
     <div class="header-text">
       <h1 class="header-text light">It's News To Me</h1>
